修复.h文件中的注释被生成function的bug

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ bin-debug/Main.swf
 bin-debug/Main.swf
 
 bin-debug/Main.swf
+
+bin-debug/FlexUnitApplication.swf
+
+bin-debug/FlexUnitApplication.swf
+
+bin-debug/FlexUnitCompilerApplication.swf
+
+bin-debug/FlexUnitCompilerApplication.swf
